[add] play session dto